--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="LibraryIncludes.h" />
     <ClInclude Include="Engine\Basic\GameTime.h" />
     <ClInclude Include="Engine\Graphics\Texture.h" />
+    <ClInclude Include="RapidXML.h" />
     <ClInclude Include="Structural\Components\Example\UserInputTestComponent.h" />
     <ClInclude Include="Structural\Components\Spatial\TransformComponent.h" />
     <ClInclude Include="Structural\Components\Visual\SpriteComponent.h" />
@@ -201,6 +202,7 @@
     <Import Project="..\packages\sdl2_mixer.nuget.2.8.0\build\native\sdl2_mixer.nuget.targets" Condition="Exists('..\packages\sdl2_mixer.nuget.2.8.0\build\native\sdl2_mixer.nuget.targets')" />
     <Import Project="..\packages\sdl2_net.nuget.redist.2.2.0\build\native\sdl2_net.nuget.redist.targets" Condition="Exists('..\packages\sdl2_net.nuget.redist.2.2.0\build\native\sdl2_net.nuget.redist.targets')" />
     <Import Project="..\packages\sdl2_net.nuget.2.2.0\build\native\sdl2_net.nuget.targets" Condition="Exists('..\packages\sdl2_net.nuget.2.2.0\build\native\sdl2_net.nuget.targets')" />
+    <Import Project="..\packages\rapidxml.1.13\build\native\rapidxml.targets" Condition="Exists('..\packages\rapidxml.1.13\build\native\rapidxml.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -216,5 +218,6 @@
     <Error Condition="!Exists('..\packages\sdl2_mixer.nuget.2.8.0\build\native\sdl2_mixer.nuget.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\sdl2_mixer.nuget.2.8.0\build\native\sdl2_mixer.nuget.targets'))" />
     <Error Condition="!Exists('..\packages\sdl2_net.nuget.redist.2.2.0\build\native\sdl2_net.nuget.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\sdl2_net.nuget.redist.2.2.0\build\native\sdl2_net.nuget.redist.targets'))" />
     <Error Condition="!Exists('..\packages\sdl2_net.nuget.2.2.0\build\native\sdl2_net.nuget.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\sdl2_net.nuget.2.2.0\build\native\sdl2_net.nuget.targets'))" />
+    <Error Condition="!Exists('..\packages\rapidxml.1.13\build\native\rapidxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\rapidxml.1.13\build\native\rapidxml.targets'))" />
   </Target>
 </Project>
