--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
@@ -74,6 +74,9 @@
     <Filter Include="Project Files\Engine\Input\Resources">
       <UniqueIdentifier>{da1c21a8-eb5b-4b66-ac0a-c753c3506a98}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Package Files">
+      <UniqueIdentifier>{56c5e8d6-cd1c-4b98-9dd0-32ae580d4396}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Structural\Scene\GrandScene.cpp">
@@ -140,9 +143,6 @@
   <ItemGroup>
     <ClInclude Include="Structural\Scene\GrandScene.h">
       <Filter>Project Files\Structural\Scene\API</Filter>
-    </ClInclude>
-    <ClInclude Include="LibraryIncludes.h">
-      <Filter>Project Files</Filter>
     </ClInclude>
     <ClInclude Include="Structural\Scene\Scene.h">
       <Filter>Project Files\Structural\Scene\API</Filter>
@@ -227,6 +227,12 @@
     </ClInclude>
     <ClInclude Include="Engine\Input\ControllerLayoutFromXML.h">
       <Filter>Project Files\Engine\Input\API</Filter>
+    </ClInclude>
+    <ClInclude Include="LibraryIncludes.h">
+      <Filter>Package Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RapidXML.h">
+      <Filter>Package Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
