--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
@@ -142,10 +142,10 @@
     <ClInclude Include="File\Directory.h" />
     <ClInclude Include="File\File.h" />
     <ClInclude Include="LibraryIncludes.h" />
-    <ClInclude Include="Object\Exceptions\ArgumentNullException.hpp" />
-    <ClInclude Include="Object\Exceptions\NotImplementedException.hpp" />
-    <ClInclude Include="Object\Exceptions\SystemNullReference.hpp" />
-    <ClInclude Include="Object\FException.h" />
+    <ClInclude Include="Object\Asserts\ArgumentNullException.hpp" />
+    <ClInclude Include="Object\Asserts\NotImplementedException.hpp" />
+    <ClInclude Include="Object\Asserts\SystemNullReference.hpp" />
+    <ClInclude Include="Object\FAsserts.h" />
     <ClInclude Include="Object\Object.h" />
     <ClInclude Include="Object\TypeHelpers.hpp" />
     <ClInclude Include="Structural\FPoint.h" />
@@ -159,7 +159,7 @@
     <ClCompile Include="Events\Subject.cpp" />
     <ClCompile Include="File\Directory.cpp" />
     <ClCompile Include="File\File.cpp" />
-    <ClCompile Include="Object\FException.cpp" />
+    <ClCompile Include="Object\FAsserts.cpp" />
     <ClCompile Include="Object\Object.cpp" />
     <ClCompile Include="Structural\FPoint.cpp" />
     <ClCompile Include="Structural\FPointLocationEventArguments.h" />
