Finished XML Loader

--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj.filters
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj.filters
@@ -134,6 +134,9 @@
     <ClInclude Include="Object\Asserts\SystemNullReference.hpp">
       <Filter>Project Files\Object\Asserts</Filter>
     </ClInclude>
+    <ClInclude Include="Object\Asserts\FileOpenAssert.hpp">
+      <Filter>Project Files\Object\Asserts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Text/FString.cpp">
