--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="File\File.h" />
     <ClInclude Include="LibraryIncludes.h" />
     <ClInclude Include="Object\Asserts\ArgumentNullException.hpp" />
+    <ClInclude Include="Object\Asserts\FileOpenAssert.hpp" />
     <ClInclude Include="Object\Asserts\NotImplementedException.hpp" />
     <ClInclude Include="Object\Asserts\SystemNullReference.hpp" />
     <ClInclude Include="Object\FAsserts.h" />
