[#30] Created a fuller Vector2D implementation

--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibraryTests/StandardCLibraryTests.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibraryTests/StandardCLibraryTests.vcxproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <ClCompile Include="Collection\Organised\FCollectionTests.cpp" />
     <ClCompile Include="Collection\Organised\FListTests.cpp" />
+    <ClCompile Include="Structural\FVector2DTests.cpp" />
     <ClCompile Include="Text\FStringTests.cpp" />
   </ItemGroup>
   <ItemGroup>
