--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -173,6 +173,8 @@
     <ClInclude Include="Structural\Spatial\Area\Rectangle.h" />
     <ClInclude Include="Structural\Spatial\Collision\Collision.h" />
     <ClInclude Include="Structural\Spatial\Collision\CollisionDectection.h" />
+    <ClInclude Include="Structural\Spatial\Collision\CollisionDectectionSubscription.h" />
+    <ClInclude Include="Structural\Spatial\Collision\CollisionDectectionUpdate.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine\Basic\FilesAndFolders.cpp" />
