[#10] Added GUIDs to GameObject

--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
@@ -147,6 +147,9 @@
     <ClInclude Include="Object\Asserts\NotImplementedException.hpp" />
     <ClInclude Include="Object\Asserts\SystemNullReference.hpp" />
     <ClInclude Include="Object\FAsserts.h" />
+    <ClInclude Include="Object\GUID\GUID.h" />
+    <ClInclude Include="Object\GUID\GUIDHelpers.h" />
+    <ClInclude Include="Object\GUID\WindowsGUID.h" />
     <ClInclude Include="Object\Object.h" />
     <ClInclude Include="Object\TypeHelpers.hpp" />
     <ClInclude Include="Structural\FObservablePoint.h" />
@@ -164,6 +167,9 @@
     <ClCompile Include="File\Directory.cpp" />
     <ClCompile Include="File\File.cpp" />
     <ClCompile Include="Object\FAsserts.cpp" />
+    <ClCompile Include="Object\GUID\GUID.cpp" />
+    <ClCompile Include="Object\GUID\GUIDHelpers.cpp" />
+    <ClCompile Include="Object\GUID\WindowsGUID.cpp" />
     <ClCompile Include="Object\Object.cpp" />
     <ClCompile Include="Structural\FObservablePoint.cpp" />
     <ClCompile Include="Structural\FObservableVector2D.cpp" />
@@ -175,6 +181,5 @@
     <ClCompile Include="Time\Timespan.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
