--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
@@ -128,6 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Collection\Dictionary\FDictionary.hpp" />
     <ClInclude Include="Collection\Organised\FCollection.hpp" />
     <ClInclude Include="Collection\Organised\FList.hpp" />
     <ClInclude Include="Collection\Vector\VectorHelpers.hpp" />
